--- a/.gitignore
+++ b/.gitignore
@@ -32,23 +32,7 @@
 *.app
 
 # CMake
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
-
-bin/
-lib/
+build/
 
 # vscode
 .vscode/
-
-# gRPC
-generated/
