--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-# Generate code files from proto files
+# Generate code files from proto files under build/generated
+set(PROTO_GEN_DIR "${CMAKE_SOURCE_DIR}/build/generated")
 add_subdirectory(proto)
 
 # Include src as subdirectory
