--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,21 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+# (TODO: kyuds) configure cmake to local install/build grpc
+# include(FetchContent)
+# set(ABSL_ENABLE_INSTALL ON)
+# FetchContent_Declare(
+#   gRPC
+#   GIT_REPOSITORY https://github.com/grpc/grpc
+#   GIT_TAG        v1.55.1
+# )
+# set(FETCHCONTENT_QUIET OFF)
+# FetchContent_MakeAvailable(gRPC)
+# find_package(Protobuf REQUIRED)
+# find_package(Threads REQUIRED)
+
+# set(_PROTOBUF_PROTOC $<TARGET_FILE:protobuf::protoc>)
+# set(_GRPC_CPP_PLUGIN_EXECUTABLE $<TARGET_FILE:grpc_cpp_plugin>)
+
 # Include src as subdirectory
 add_subdirectory(src)
