raft leader election start

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,3 +26,16 @@ target_include_directories(server PUBLIC
 target_link_libraries(server
     grpc_proto
 )
+
+add_executable(
+    raft
+    service.cc
+    raft.hh
+    raft.cc
+    config.hh
+    config.cc
+)
+
+target_include_directories(server PUBLIC
+    "${CMAKE_CURRENT_BINARY_DIR}"
+)
