delete testing files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,34 +1,7 @@
 # generate proto files
 include(cmake/proto.cmake)
 
-add_executable(
-    client
-    client.cc
-)
-
-target_include_directories(client PUBLIC
-    "${CMAKE_CURRENT_BINARY_DIR}"
-)
-
-target_link_libraries(client
-    grpc_proto
-)
-
-add_executable(
-    server
-    server.cc
-)
-
-target_include_directories(server PUBLIC
-    "${CMAKE_CURRENT_BINARY_DIR}"
-)
-
-target_link_libraries(server
-    grpc_proto
-)
-
-add_executable(
-    raft
+add_executable(raft
     service.cc
     raft.hh
     raft.cc
@@ -36,6 +9,10 @@ add_executable(
     config.cc
 )
 
-target_include_directories(server PUBLIC
+target_include_directories(raft PUBLIC
     "${CMAKE_CURRENT_BINARY_DIR}"
+)
+
+target_link_libraries(raft
+    grpc_proto
 )
