--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,13 @@
 include(cmake/proto.cmake)
 
 add_executable(raft
-    service.cc
+    cli.cc
     raft.h
     raft.cc
+    rpc.h
+    rpc.cc
+    storage.h
+    storage.cc
     config.h
     config.cc
     utils.h
@@ -15,9 +19,7 @@ target_include_directories(raft PUBLIC
     "${CMAKE_CURRENT_BINARY_DIR}"
 )
 
-# include json parser for configuration
-include(FetchContent)
-
+# include json parser for ConfigParser
 FetchContent_Declare(json URL ${JSON_LIB})
 FetchContent_MakeAvailable(json)
 
