--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # fetch library URLs
+include(FetchContent)
 set(JSON_LIB https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
 set(JSON_LIB_LINK nlohmann_json::nlohmann_json)
 
